--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "kill": "fuser -k 5000/tcp",
@@ -66,6 +70,7 @@
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
+    "serve": "^14.2.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "three": "^0.175.0",
