--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  "rewrites": [
+    { "source": "/supabase-proxy/:path*", "destination": "https://cncimuwunjjxrlsnjstm.supabase.co/:path*" },
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
